# flightlog

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  sync.py
.github/workflows/: deploy.yml  pre-commit.yml  ruff.yml
2019/09/06/: 2019-09-06-XTR-8030DCFD728A-01.IGC
2019/09/08/: 2019-09-08-XTR-8030DCFD728A-01.IGC
2019/09/12/: 2019-09-12-XTR-8030DCFD728A-01.IGC
2019/09/14/: 2019-09-14-XTR-8030DCFD728A-01.IGC
2020/05/14/: 2020-05-14-XTR-8030DCFD728A-01.IGC
2020/05/15/: 2020-05-15-XTR-8030DCFD728A-01.IGC
2020/05/18/: 2020-05-18-XTR-8030DCFD728A-01.IGC
2020/05/21/: 2020-05-21-XTR-8030DCFD728A-01.IGC
2020/05/27/: 2020-05-27-XTR-8030DCFD728A-01.IGC
2020/05/29/: 2020-05-29-XTR-8030DCFD728A-02.IGC  2020-05-29-XTR-8030DCFD728A-05.IGC
2020/05/30/: 2020-05-30-XTR-8030DCFD728A-01.IGC
2020/05/31/: 2020-05-31-XTR-8030DCFD728A-01.IGC
2020/06/01/: 2020-06-01-XTR-8030DCFD728A-01.IGC
2020/06/02/: 2020-06-02-XTR-8030DCFD728A-01.IGC  2020-06-02-XTR-8030DCFD728A-02.IGC
2020/07/14/: 2020-07-14-XTR-8030DCFD728A-02.IGC
2020/08/07/: 2020-08-07-XTR-8030DCFD728A-02.IGC  2020-08-07-XTR-8030DCFD728A-04.IGC  2020-08-07-XTR-8030DCFD728A-05.IGC
2020/08/08/: 2020-08-08-XTR-8030DCFD728A-01.IGC
2020/09/02/: 2020-09-02-XTR-8030DCFD728A-01.IGC
2020/10/29/: 2020-10-29-XTR-8030DCFD728A-01.IGC  2020-10-29-XTR-8030DCFD728A-02.IGC
src/: datetime.rs  flight.rs  flightlog.rs  igc.rs  main.rs  ui.rs
src/templates/: flight.html  index.html
web/: .gitignore  biome.json  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  main.css  main.jsx
(+308 files in other folders)
